# denote-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  dprint.json  release.sh
denote/: CHANGELOG.md  Cargo.toml  README.md
denote/src/: denote.rs  extension.rs  format.rs  identifier.rs  keywords.rs  lib.rs  name_scheme.rs  regex.rs  signature.rs  tests.rs  title.rs  utils.rs
denote/src/name_scheme/: extension.rs  extention.rs  identifier.rs  keywords.rs  regex.rs  signature.rs  title.rs
denote/tests/: tests.rs
denote_cli/: CHANGELOG.md  Cargo.toml  README.md
denote_cli/src/: args.rs  cli_args.rs  main.rs  rename.rs  touch.rs  ui.rs
denote_cli/src/args/: rename.rs  touch.rs
src/: cli_args.rs  io.rs  lib.rs  main.rs  name_scheme.rs  tests.rs  ui.rs  user_interaction.rs  utils.rs
src/name_scheme/: extention.rs  identifier.rs  keywords.rs  mod.rs  regex.rs  regexp.rs  signature.rs  title.rs
src/tests/: extention.rs  keywords.rs  mod.rs
