[workspace]
members = ["denote", "denote_cli"]
resolver = "2"

[workspace.package]
edition = "2021"
description = "Create and rename files with denote name shcheme"
authors = ["Artyom Kalin Vyacheslavovich <kalin.a.v20031@gmail.com>"]
repository = "https://github.com/5121f/denote-rs"
license = "MPL-2.0"

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
codegen-units = 1
