[workspace]
members = ["denote", "denote_cli"]
resolver = "2"

[workspace.package]
edition = "2024"
description = "Use denote name shcheme outside of Emacs"
authors = ["Artyom Kalin <kalin.a.v20031@gmail.com>"]
repository = "https://github.com/5121f/denote-rs"
license = "MPL-2.0 OR GPL-2.0-or-later"

[profile.release]
lto = true
opt-level = "s"
strip = "symbols"
codegen-units = 1
panic = "abort"
