[package]
name = "zeroten-denote"
version = "0.1.4"
description = "Handle denote name scheme"
keywords = ["denote", "name-scheme"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex = { version = "1", default-features = false }

[dependencies.chrono]
version = "0"
default-features = false
features = ["alloc", "clock"]
