[package]
name = "zeroten-denote"
version = "0.1.7"
description = "Handle denote name scheme"
keywords = ["denote", "name-scheme"]

edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
regex = "1"

[dependencies.chrono]
version = "0"
default-features = false
features = ["alloc", "clock"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
