[package]
name = "zeroten-denote-cli"
version = "0.1.0"
keywords = ["cli", "denote", "name-scheme"]
categories = ["command-line-utilities"]

edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
denote = { package = "zeroten-denote", version = "0.1.0" }
clap = { version = "4.5.17", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0.86"
