[package]
name = "zeroten-denote-cli"
version = "0.1.1"
keywords = ["cli", "denote", "name-scheme"]
categories = ["command-line-utilities"]

edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "denote"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0.86"

[dependencies.denote]
package = "zeroten-denote"
version = "0.1.1"
# path = "../denote"
