[package]
name = "zeroten-denote-cli"
version = "0.1.2"
keywords = ["cli", "denote", "name-scheme"]
categories = ["command-line-utilities"]

edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "denote"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "cargo", "wrap_help"] }
anyhow = "1.0.98"
fs-err = "3.1.1"

[dependencies.denote]
package = "zeroten-denote"
version = "0.1.3"
# path = "../denote"
